--- a/pom.xml
+++ b/pom.xml
@@ -51,16 +51,21 @@
 		
 		<!-- Dependência para integração com o OpenAPI, permitindo gerar a documentação da API -->
 		<dependency>
-            		<groupId>org.springdoc</groupId>
-            		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            		<version>2.8.9</version>
-        	</dependency>
-
+  			<groupId>org.springdoc</groupId>
+  			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+  			<version>2.1.0</version>
+		</dependency>
 		<!-- Dependência do banco de dados MySQL-->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<version>8.0.33</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.h2database</groupId>
+    		<artifactId>h2</artifactId>
+    		<version>2.2.224</version> <!-- Versão mais recente -->
+    		<scope>runtime</scope> <!-- Opcional: só é necessário em runtime -->
 		</dependency>
 
 		<!-- Dependência do Lombok, que gera automaticamente métodos como getters, setters e construtores -->
